--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Hi there <br> How can i help you today</p>
           </li>
           <li class="chat outgoing">
-            <p>Hi there <br> How can i help you today</p>
+            <p>Hi there <br> boopbiipboop</p>
           </li>
           </li>
         </ul>
