--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script src="scrpit.js" defer></script>
   </head>
   <body class="show-chatbot">
 
@@ -19,14 +20,12 @@
     <div class="chatbot">
       <header>
         <h2>Chatbot</h2>
+        <span class="material-symbols-outlined">close</span>
       </header>
         <ul class="chatbox">
           <li class="chat incoming">
             <span class="material-symbols-outlined">smart_toy</span>
             <p>Hi there <br> How can i help you today</p>
-          </li>
-          <li class="chat outgoing">
-            <p>Hi there <br> boopbiipboop</p>
           </li>
           </li>
         </ul>
