--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="scrpit.js" defer></script>
   </head>
-  <body class="show-chatbot">
+  <body>
 
     <button class="chatbot-toggler">
       <span class="material-symbols-outlined">mode_comment</span>
