FAQ-boxes + SMP colours

--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
-
 <html lang="en" dir="auto">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Chatbot for SMP</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="scrpit.js" defer></script>
-  </head>
-  <body class="show-chatbot">
+    <script src="scrpit.js" defer></script> <!-- Make sure the file name is correct -->
+</head>
+<body class="show-chatbot">
 
     <button class="chatbot-toggler">
-      <span class="material-symbols-outlined">mode_comment</span>
-      <span class="material-symbols-outlined">close</span>
+        <span class="material-symbols-outlined">mode_comment</span>
+        <span class="material-symbols-outlined">close</span>
     </button>
 
     <div class="chatbot">
-      <header>
-        <h2>Chatbot</h2>
-        <span class="material-symbols-outlined">close</span>
-      </header>
+        <header>
+            <h2>Chatbot</h2>
+            <span class="material-symbols-outlined">close</span>
+        </header>
         <ul class="chatbox">
-          <li class="chat incoming">
-            <span class="material-symbols-outlined">smart_toy</span>
-            <p>Hi there <br> How can i help you today</p>
-          </li>
-          </li>
+            <li class="chat incoming">
+                <span class="material-symbols-outlined">smart_toy</span>
+                <p>Hey, I am the SMP Chatbot!<br>Click on a box, or ask a question in the chat. :D</p>
+            </li>
         </ul>
         <div class="chat-input">
-          <textarea placeholder="Enter a message..." required></textarea>
-          <span id="send-btn" class="material-symbols-outlined">send</span>
+            <textarea placeholder="Enter a message..." required></textarea>
+            <span id="send-btn" class="material-symbols-outlined">send</span>
         </div>
-      
     </div>
-  </body>
+</body>
 </html>
