Bot-message before and after FAQ-buttoms

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="chatbox">
             <li class="chat incoming">
                 <span class="material-symbols-outlined">smart_toy</span>
-                <p>Hey, I am the SMP Chatbot!<br>Click on a box, or ask a question in the chat. :D</p>
+                <p>Hey, I am the SMP Chatbot!<br></p>
             </li>
         </ul>
         <div class="chat-input">
