Added a dummy htmlsite

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en" dir="auto">
   <head>
     <meta charset="utf-8">
@@ -11,7 +10,7 @@
     <script src="scrpit.js" defer></script>
   </head>
   <body>
-
+    <div id="header-placeholder"></div>
     <button class="chatbot-toggler">
       <span class="material-symbols-outlined">mode_comment</span>
       <span class="material-symbols-outlined">close</span>
