--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="auto">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Chatbot for SMP</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -13,7 +13,6 @@
 </head>
 
 <body class="show-chatbot">
-
   <button class="chatbot-toggler">
     <span class="material-symbols-outlined">mode_comment</span>
     <span class="material-symbols-outlined">close</span>
@@ -27,15 +26,16 @@
     <ul class="chatbox">
       <li class="chat incoming">
         <span class="material-symbols-outlined">smart_toy</span>
-        <p>Hi there <br> How can i help you today</p>
-      </li>
+        <p>
+          Hi there <br />
+          How can i help you today
+        </p>
       </li>
     </ul>
     <div class="chat-input">
       <textarea placeholder="Enter a message..." required></textarea>
       <span id="send-btn" class="material-symbols-outlined">send</span>
     </div>
-
   </div>
 </body>
 
