Made routing so that the chatbot doesnt refresh SPA

--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
     <script src="scrpit.js" defer></script>
   </head>
   <body>
+    
     <div id="header-placeholder"></div>
+    <div id="main-content">
+
+
+    </div>
+
     <button class="chatbot-toggler">
       <span class="material-symbols-outlined">mode_comment</span>
       <span class="material-symbols-outlined">close</span>
     </button>
 
-    <div class="chatbot">
+    <div id="chatbot" class="chatbot">
       <header>
         <h2>Chatbot</h2>
         <span class="material-symbols-outlined">close</span>
