Norwegian* bot + new and more buttons

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <ul class="chatbox">
             <li class="chat incoming">
                 <span class="material-symbols-outlined">smart_toy</span>
-                <p>Hey, I am the SMP Chatbot!<br></p>
+                <p>Hei! Jeg er Sunnmørspostens Chatbot!<br></p>
             </li>
         </ul>
         <div class="chat-input">
-            <textarea placeholder="Enter a message..." required></textarea>
+            <textarea placeholder="Skriv her..." required></textarea>
             <span id="send-btn" class="material-symbols-outlined">send</span>
         </div>
     </div>
