--- a/public/article.html
+++ b/public/article.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article Page</title>
     <link rel="stylesheet" href="style.css"> <!-- Assuming you have a CSS file for styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="articlestyle.css">
     <script src="article.js"></script> <!-- Your JavaScript file -->
+    <script src="scrpit.js" defer></script>
 </head>
 <body>
+  <div id="header-placeholder"></div>
   <div class="article-container">
     <h1 id="article-title">Article Title</h1>
     <h3 id="article-author">Author Name</h3>
@@ -15,5 +19,27 @@
     
     <p id="article-content">This is where the article content will go.</p>
 </div>
+<button class="chatbot-toggler">
+  <span class="material-symbols-outlined">mode_comment</span>
+  <span class="material-symbols-outlined">close</span>
+</button>
+
+<div id="chatbot" class="chatbot">
+<header>
+  <h2>Chatbot</h2>
+  <span class="material-symbols-outlined">close</span>
+</header>
+  <ul class="chatbox">
+      <li class="chat incoming">
+          <span class="material-symbols-outlined">smart_toy</span>
+          <p>Hei! Jeg er Sunnmørspostens Chatbot!<br></p>
+      </li>
+  </ul>
+  <div class="chat-input">
+      <textarea placeholder="Skriv her..." required></textarea>
+      <span id="send-btn" class="material-symbols-outlined">send</span>
+  </div>
+</div>
+</body>
 </body>
 </html>
