--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="scrpit.js" defer></script>
   </head>
   <body>
+
+    <div id="typing" class="chat incoming hidden">
+      <div class="typing-dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+    </div>
     
     <div id="header-placeholder"></div>
     <div id="main-content">
@@ -24,7 +32,6 @@
     <div id="chatbot" class="chatbot">
       <header>
         <h2>Chatbot</h2>
-        <span class="material-symbols-outlined">close</span>
       </header>
         <ul class="chatbox">
             <li class="chat incoming">
