--- a/public/article.html
+++ b/public/article.html
@@ -27,7 +27,7 @@
 <div id="chatbot" class="chatbot">
 <header>
   <h2>Chatbot</h2>
-  <span class="material-symbols-outlined">close</span>
+ <!--     <span class="material-symbols-outlined">close</span>  -->
 </header>
   <ul class="chatbox">
   </ul>
