fixed chatbot window size. letter counter and limit.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
             <li class="chat incoming">
             </li>
         </ul>
+        
+        <div class="chatbox-spacer"></div>
         <div class="chat-input">
             <textarea placeholder="Skriv her..." required></textarea>
-            <span id="send-btn" class="material-symbols-outlined">send</span>
+            <span id="send-btn" class="material-symbols-outlined">send</span>            
         </div>
     </div>
 </body>
