--- a/public/article.html
+++ b/public/article.html
@@ -27,15 +27,18 @@
 <div id="chatbot" class="chatbot">
 <header>
   <h2>Chatbot</h2>
- <!--     <span class="material-symbols-outlined">close</span>  -->
-</header>
+   <!--     <span class="material-symbols-outlined" id="chatbot-close">close</span> -->
+  </header>
   <ul class="chatbox">
+      <li class="chat incoming">
+      </li>
   </ul>
+  
+  <div class="chatbox-spacer"></div>
   <div class="chat-input">
       <textarea placeholder="Skriv her..." required></textarea>
       <span id="send-btn" class="material-symbols-outlined">send</span>
   </div>
 </div>
-</body>
 </body>
 </html>
