--- a/public/article.html
+++ b/public/article.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="articlestyle.css"> <!-- Include specific article styles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="scrpit.js" defer></script> <!-- Corrected typo 'scrpit.js' to 'script.js' -->
+    <script src="path/to/utils.js"></script>
+    <script src="path/to/apiHandlers.js"></script>
+    <script src="path/to/chatInteractions.js"></script>
+    <script src="path/to/contentManagement.js"></script>
+    <script src="path/to/csFaqManagement.js"></script>
+    <script src="path/to/messageProcessing.js"></script>
+    <script src="path/to/initUI.js"></script>
+    <script src="script.js"></script>
     <script src="article.js" defer></script> <!-- Include specific article JavaScript -->
 </head>
 <body>
