--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Engage with the Sunnmørsposten Chatbot to explore news, get assistance, and find answers to your inquiries quickly.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="scrpit.js" defer></script> <!-- Also corrected the typo in 'script.js' -->
+    <script src="utils.js"></script>
+    <script src="apiHandlers.js"></script>
+    <script src="chatInteractions.js"></script>
+    <script src="contentManagement.js"></script>
+    <script src="csFaqManagement.js"></script>
+    <script src="messageProcessing.js"></script>
+    <script src="initUI.js"></script>
+    <script src="script.js" type="module"></script>
 </head>
 <body>
 
