--- a/public/article.html
+++ b/public/article.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="articlestyle.css"> <!-- Include specific article styles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="path/to/utils.js"></script>
-    <script src="path/to/apiHandlers.js"></script>
-    <script src="path/to/chatInteractions.js"></script>
-    <script src="path/to/contentManagement.js"></script>
-    <script src="path/to/csFaqManagement.js"></script>
-    <script src="path/to/messageProcessing.js"></script>
-    <script src="path/to/initUI.js"></script>
-    <script src="script.js"></script>
+    <script src="utils.js" type="module"></script>
+    <script src="apiHandlers.js" type="module"></script>
+    <script src="chatInteractions.js" type="module"></script>
+    <script src="contentManagement.js" type="module"></script>
+    <script src="csFaqManagement.js" type="module"></script>
+    <script src="messageProcessing.js" type="module"></script>
+    <script src="script.js" type="module"></script>
     <script src="article.js" defer></script> <!-- Include specific article JavaScript -->
 </head>
 <body>
