removed unnecessary text and space

--- a/public/article.html
+++ b/public/article.html
@@ -29,10 +29,10 @@
 <div id="header-placeholder"></div>
 <div id="main-content">
     <div class="article-container">
-        <h1 id="article-title">Article Title</h1>
-        <h3 id="article-author">Author Name</h3>
-        <p id="article-category">Category</p>
-        <p id="article-content">This is where the article content will go.</p>
+        <h1 id="article-title"></h1>
+        <h3 id="article-author"></h3>
+        <p id="article-category"></p>
+        <p id="article-content"></p>
     </div>
 </div>
 
